--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
     <title>Signup Form</title>
     <script
       type="module"
@@ -18,6 +20,9 @@
     <section>
       <form action="/req/signup" method="post">
         <h1>Sign Up</h1>
+        <ul th:if="${errors}">
+            <li th:each="error : ${errors}" th:text="${error}" style="color: red"></li>
+        </ul>
         <div class="inputbox">
           <ion-icon name="person-outline"></ion-icon>
           <input type="text" id="username" name="username" required />
