--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -20,30 +20,30 @@
         <form action="/req/login" method="post">
           <h1>Login</h1>
           <div class="dialog-row">
-            <label
-              th:if="${param.error}"
-              th:text="${session['SPRING_SECURITY_LAST_EXCEPTION'].message}"
-              class="text-center redText"
-            ></label>
+              <label
+                  th:if="${param.error}"
+                  th:text="${session['error']}"
+                  style="text-align: center; color: red"
+              ></label>
           </div>
           <div class="inputbox">
-            <ion-icon name="email-outline"></ion-icon>
-            <input name="username" id="username" type="name" required />
-            <label for="">username</label>
+              <ion-icon name="email-outline"></ion-icon>
+              <input name="username" id="username" type="text" required />
+              <label for="username">Username</label>
           </div>
           <div class="inputbox">
-            <ion-icon name="lock-closed-outline"></ion-icon>
-            <input name="password" type="password" id="password" required />
-            <label for="">Password</label>
+              <ion-icon name="lock-closed-outline"></ion-icon>
+              <input name="password" type="password" id="password" required />
+              <label for="password">Password</label>
           </div>
           <div class="register">
-            <p><a href="#">Forget Password ?</a></p>
+              <p><a href="#">Forget Password?</a></p>
           </div>
-          <button>Log in</button>
+          <button type="submit">Log in</button>
           <div class="register">
-            <p>Don't have a account ?<a href="/req/signup"> Register!!</a></p>
+              <p>Don't have an account? <a href="/req/signup">Register!!</a></p>
           </div>
-        </form>
+      </form>
       </section>
     </body>
   </body>
