--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,50 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
     <title>Login</title>
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
-    ></script>
-    <link rel="stylesheet" href="/css/style.css" />
-    <script src="/js/signup.js" defer></script>
-  </head>
-  <body>
-      <section>
-        <form action="/req/login" method="post">
-          <h1>Login</h1>
-          <div class="dialog-row">
-              <label
-                  th:if="${param.error}"
-                  th:text="${session['error']}"
-                  style="text-align: center; color: red"
-              ></label>
-          </div>
-          <div class="inputbox">
-              <ion-icon name="email-outline"></ion-icon>
-              <input name="username" id="username" type="text" required />
-              <label for="username">Username</label>
-          </div>
-          <div class="inputbox">
-              <ion-icon name="lock-closed-outline"></ion-icon>
-              <input name="password" type="password" id="password" required />
-              <label for="password">Password</label>
-          </div>
-          <div class="register">
-              <p><a href="#">Forget Password?</a></p>
-          </div>
-          <button type="submit">Log in</button>
-          <div class="register">
-              <p>Don't have an account? <a href="/req/signup">Register!!</a></p>
-          </div>
-      </form>
-      </section>
-    </body>
-  </body>
+</head>
+<body>
+    <h1>Login</h1>
+    <div th:if="${param.error}" style="color: red;">Invalid username or password</div>
+    <div th:if="${param.logout}" style="color: green;">You have been logged out</div>
+    <div th:if="${message}" style="color: green;" th:text="${message}"></div>
+    <form th:action="@{/login}" method="post">
+        <div>
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required>
+        </div>
+        <div>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
+        </div>
+        <div>
+            <button type="submit">Login</button>
+        </div>
+        <div>
+          <a href="/signup">Sign Up</a>
+        </div>
+    </form>
+</body>
 </html>
