--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -1,59 +1,32 @@
+
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
-    <title>Signup Form</title>
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
-    ></script>
-    <link rel="stylesheet" href="/css/style.css" />
-    <script src="/js/signup.js" defer></script>
-  </head>
-  <body>
-    <section>
-      <form action="/req/signup" method="post">
-        <h1>Sign Up</h1>
-        <ul th:if="${errors}">
-            <li th:each="error : ${errors}" th:text="${error}" style="text-align: center; color: red"></li>
-        </ul>
-        <div class="inputbox">
-          <ion-icon name="person-outline"></ion-icon>
-          <input type="text" id="username" name="username" required />
-          <label for="username">Name</label>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+    <title>Sign Up</title>
+</head>
+<body>
+    <h1>Sign Up</h1>
+    <div th:if="${error}" th:text="${error}" style="color: red;"></div>
+    <form th:action="@{/signup}" method="post">
+        <div>
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required>
         </div>
-        <div class="inputbox">
-          <ion-icon name="mail-outline"></ion-icon>
-          <input type="email" id="email" name="email" required />
-          <label for="email">Email</label>
+        <div>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
         </div>
-
-        <div class="inputbox">
-          <ion-icon name="lock-closed-outline"></ion-icon>
-          <input type="password" id="password" name="password" required />
-          <label for="password">Password</label>
+        <div>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
         </div>
-        <div class="inputbox">
-          <ion-icon name="lock-closed-outline"></ion-icon>
-          <input
-            type="password"
-            id="confirmPassword"
-            name="confirmPassword"
-            required
-          />
-          <label for="confirmPassword">Confirm Password</label>
+        <div>
+            <label for="confirmPassword">Confirm Password:</label>
+            <input type="password" id="confirmPassword" name="confirmPassword" required>
         </div>
-        <button id="submit" type="submit">Sign Up</button>
-        <div class="register">
-          <p>Already have an account? <a href="/req/login">Log In</a></p>
+        <div>
+            <button type="submit">Sign Up</button>
         </div>
-      </form>
-    </section>
-  </body>
+    </form>
+</body>
 </html>
