creating functionality for a profile page and updating information

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,6 +18,10 @@
   </head>
   <body>
     <section>
+      <div>
+        <ion-icon name="checkmark-circle-outline"></ion-icon>
+        <a href="/profile">Profile</a>
+      </div>
       <form name="logoutForm" th:action="@{/logout}" method="post">
         <h1>Congratulations!</h1>
         <h4>There is only one thing left to do...</h4>
