--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -87,5 +87,26 @@
       </form>
     </div>
 
+    <div>
+      <h2>Update User Details</h2>
+      <form th:action="@{/update_user_details}" method="post">
+        <div>
+          <label for="firstName">First Name:</label>
+          <input type="text" id="firstName" name="firstName" required>
+        </div>
+        <div>
+          <label for="lastName">Last Name:</label>
+          <input type="text" id="lastName" name="lastName" required>
+        </div>
+        <div>
+          <label for="biography">Biography:</label>
+          <textarea id="biography" name="biography" required></textarea>
+        </div>
+        <div>
+          <button type="submit">Update User Details</button>
+        </div>
+      </form>
+    </div>
+
   </body>
 </html>
