--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -119,3 +119,15 @@ button:hover {
   text-decoration: underline;
   color: #a8a8a8;
 }
+
+img {
+  position: block;
+  margin: 0 auto;
+  top: 0;
+  left: 0;
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 50%;
+  transition: all 0.5s ease-in-out;
+}
