--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,14 +19,16 @@
   <body>
     <section>
       <div>
-        <ion-icon name="checkmark-circle-outline"></ion-icon>
-        <a href="/profile">Profile</a>
+        <div>
+          <ion-icon name="checkmark-circle-outline"></ion-icon>
+          <a href="/profile">Profile</a>
+        </div>
+        <form name="logoutForm" th:action="@{/logout}" method="post">
+          <h1>Congratulations!</h1>
+          <h4>There is only one thing left to do...</h4>
+          <button>Sign Out</button>
+        </form>
       </div>
-      <form name="logoutForm" th:action="@{/logout}" method="post">
-        <h1>Congratulations!</h1>
-        <h4>There is only one thing left to do...</h4>
-        <button>Sign Out</button>
-      </form>
     </section>
   </body>
 </html>
