--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,28 +1,33 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>Login</title>
-</head>
-<body>
-    <h1>Login</h1>
-    <div th:if="${param.error}" style="color: red;">Invalid username or password</div>
-    <div th:if="${param.logout}" style="color: green;">You have been logged out</div>
-    <div th:if="${message}" style="color: green;" th:text="${message}"></div>
-    <form th:action="@{/login}" method="post">
-        <div>
+  <head>
+      <title>Login</title>
+      <link rel="stylesheet" href="/css/style.css" />
+  </head>
+  <body>
+    <section>
+      <div>
+        <h1>Login</h1>
+        <div th:if="${param.error}" style="color: red;">Invalid username or password</div>
+        <div th:if="${param.logout}" style="color: green;">You have been logged out</div>
+        <div th:if="${message}" style="color: green;" th:text="${message}"></div>
+        <form th:action="@{/login}" method="post">
+          <div>
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
-        </div>
-        <div>
+          </div>
+          <div>
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
-        </div>
-        <div>
+          </div>
+          <div>
             <button type="submit">Login</button>
-        </div>
-        <div>
-          <a href="/signup">Sign Up</a>
-        </div>
-    </form>
-</body>
+          </div>
+          <div>
+            <a href="/signup">Sign Up</a>
+          </div>
+        </form>
+      </div>
+    </section>
+  </body>
 </html>
