--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -3,30 +3,36 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Sign Up</title>
+    <link rel="stylesheet" href="/css/style.css" />
 </head>
-<body>
-    <h1>Sign Up</h1>
-    <div th:if="${error}" th:text="${error}" style="color: red;"></div>
-    <form th:action="@{/signup}" method="post">
-        <div>
+  <body>
+    <section>
+      <div>
+        <h1>Sign Up</h1>
+        <div th:if="${error}" th:text="${error}" style="color: red;"></div>
+        <form th:action="@{/signup}" method="post">
+          <div>
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
-        </div>
-        <div>
+          </div>
+          <div>
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
-        </div>
-        <div>
+          </div>
+          <div>
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
-        </div>
-        <div>
+          </div>
+          <div>
             <label for="confirmPassword">Confirm Password:</label>
             <input type="password" id="confirmPassword" name="confirmPassword" required>
-        </div>
-        <div>
+          </div>
+          <div>
             <button type="submit">Sign Up</button>
-        </div>
-    </form>
-</body>
+          </div>
+        </form>
+        <a href="/login">Login</a>
+      </div>
+    </section>
+  </body>
 </html>
