--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -7,6 +7,19 @@
   <body>
     <section>
       <div>
+        <nav>
+          <tr>
+            <td>
+              <a href="/index">Home</a>
+            </td>
+            <td>
+              <a href="/profile">Profile</a>
+            </td>
+            <td>
+              <a href="/logout">Logout</a>
+            </td>
+          </tr>
+        </nav>
     <h1>User Profile</h1>
 
     <!-- SUCCESS / ERROR -->
