--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -1,37 +1,45 @@
-
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
+  <head>
     <title>Sign Up</title>
     <link rel="stylesheet" href="/css/output.css" />
-</head>
+  </head>
   <body>
-    <section>
-      <div>
-        <h1>Sign Up</h1>
-        <div th:if="${error}" th:text="${error}" style="color: red;"></div>
+    <section class="container">
+      <nav>
+        <tr>
+          <td class="flex justify-between">
+            <a class="link" href="/index">Home</a>
+          </td>
+          <td>
+            <a class="link" href="/profile">Profile</a>
+          </td>
+          <td>
+            <a class="link" href="/logout">Logout</a>
+          </td>
+        </tr>
+      </nav>
+      <div class="card">
+        <h1 class="text-2xl text-blue-600 text-center">Sign Up</h1>
+        <div th:if="${error}" th:text="${error}" class="failure box"></div>
         <form th:action="@{/signup}" method="post">
-          <div>
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required>
-          </div>
-          <div>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-          </div>
-          <div>
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
-          </div>
-          <div>
-            <label for="confirmPassword">Confirm Password:</label>
-            <input type="password" id="confirmPassword" name="confirmPassword" required>
-          </div>
-          <div>
-            <button type="submit">Sign Up</button>
-          </div>
+            <label class="label" for="username">Username:</label>
+            <input class="input" type="text" id="username" name="username" required />
+            <label class="label" for="email">Email:</label>
+            <input class="input" type="email" id="email" name="email" required />
+            <label class="label" for="password">Password:</label>
+            <input class="input" type="password" id="password" name="password" required />
+            <label class="label" for="confirmPassword">Confirm Password:</label>
+            <input
+              class="input"
+              type="password"
+              id="confirmPassword"
+              name="confirmPassword"
+              required
+            />
+            <button class="button" type="submit">Sign Up</button>
+            <a class="link" href="/login">Login</a>
         </form>
-        <a href="/login">Login</a>
       </div>
     </section>
   </body>
