--- a/src/main/resources/static/css/input.css
+++ b/src/main/resources/static/css/input.css
@@ -3,43 +3,56 @@
 @tailwind utilities;
 
 @layer base {
+  body {
+    @apply flex w-full;
+  }
+
   form {
-    @apply flex flex-col col-span-6 justify-center items-center;
+    @apply flex flex-col items-center justify-center m-6;
+  }
+
+  nav {
+    @apply flex justify-center w-full fixed bg-blue-500 text-white text-center p-2;
   }
 }
 
 @layer components {
   .container {
-    @apply flex flex-col items-center justify-center;
-  }
-
-  .input {
-    @apply p-2 mt-0.5 mx-2 mb-2 font-bold text-black bg-white rounded-md shadow-sm;
-  }
-
-  .button {
-    @apply py-2 px-6 m-2 font-bold text-white bg-blue-500 rounded-md hover:bg-blue-700 drop-shadow-sm;
-  }
-
-  .link {
-    @apply py-0.5 px-2 m-1 font-thin text-white text-sm rounded-md bg-slate-600 hover:bg-slate-800 drop-shadow-sm;
+    @apply flex flex-col items-center justify-center h-screen;
   }
 
   .label {
-    @apply px-2 w-full text-left text-sm text-black;
+    @apply w-full text-sm text-left text-black;
   }
 
-  .success {
-    @apply text-wrap text-center my-1 text-sm font-bold text-green-500;
+  .input {
+    @apply placeholder-gray-400 text-black bg-white rounded-md shadow-sm mb-3 text-sm;
   }
 
-  .failure {
-    @apply text-wrap my-1 text-center text-sm font-bold text-red-500;
+  .button {
+    @apply font-bold text-white bg-blue-500 rounded-md hover:bg-blue-700 drop-shadow-sm m-1 px-6 py-1
+  }
+
+  .link {
+    @apply text-xs text-white rounded-md bg-slate-600 hover:bg-slate-800 drop-shadow-sm m-1 px-1 py-0.5;
   }
 }
 
 @layer utilities {
   .card {
-    @apply w-1/4 p-2 m-2 bg-gray-200 border border-gray-400 rounded-md shadow-md;
+    @apply bg-gray-100 border rounded-md shadow-md;
   }
+
+  .formHeader {
+    @apply text-2xl font-bold text-center text-blue-600 m-4;
+  }
+
+  .success {
+    @apply my-1 text-sm font-bold text-center text-green-500 text-wrap;
+  }
+
+  .failure {
+    @apply my-1 text-sm font-bold text-center text-red-500 text-wrap;
+  }
+
 }
