--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -15,28 +16,30 @@
     ></script>
     <link rel="stylesheet" href="/css/output.css" />
   </head>
+  <header>
+    <nav>
+      <ul class="flex justify-between">
+        <li>
+          <a class="link" href="/index">Home</a>
+        </li>
+        <li>
+          <a class="link" href="/profile">Profile</a>
+        </li>
+        <li>
+          <a class="link" href="/logout">Logout</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
   <body>
-    <section>
-      <div>
-        <nav>
-          <tr>
-            <td class="flex justify-between">
-              <a class="link" href="/index">Home</a>
-            </td>
-            <td>
-              <a class="link" href="/profile">Profile</a>
-            </td>
-            <td>
-              <a class="link" href="/logout">Logout</a>
-            </td>
-          </tr>
-        </nav>
-        <form class="card" name="logoutForm" th:action="@{/logout}" method="post">
-          <h1>Congratulations!</h1>
-          <h4>There is only one thing left to do...</h4>
+    <div class="container">
+      <div class="card">
+        <form name="logoutForm" th:action="@{/logout}" method="post">
+          <h1 class="formHeader">Congratulations!</h1>
+          <p>There is only one thing left to do...</p>
           <button class="button">Sign Out</button>
         </form>
       </div>
-    </section>
+    </div>
   </body>
 </html>
