--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,35 +1,23 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="/css/output.css" />
   </head>
   <body>
-    <section class="container">
-      <nav>
-        <tr>
-          <td class="flex justify-between">
-            <a class="link" href="/index">Home</a>
-          </td>
-          <td>
-            <a class="link" href="/profile">Profile</a>
-          </td>
-          <td>
-            <a class="link" href="/logout">Logout</a>
-          </td>
-        </tr>
-      </nav>
+    <div class="container">
       <div class="card">
-        <h1 class="text-2xl text-blue-600 text-center">Login</h1>
-        <div th:if="${param.error}" class="failure box">
+        <h1 class="formHeader">Login</h1>
+        <div th:if="${param.error}" class="failure">
           Invalid username or password</div>
-        <div th:if="${param.logout}" class="success box" >
+        <div th:if="${param.logout}" class="success" >
           You have been logged out
         </div>
-        <div th:if="${message}" class="success box" th:text="${message}"></div>
+        <div th:if="${message}" class="success" th:text="${message}"></div>
         <form th:action="@{/login}" method="post">
-          <label class="label" for="Username">Username:</label>
-          <input
+            <label class="label" for="Username">Username:</label>
+            <input
             class="input"
             label="Username"
             type="text"
@@ -37,20 +25,22 @@
             name="username"
             placeholder="Username"
             required
-          />
-          <label class="label" for="password">Password:</label>
-          <input
+            />
+
+            <label class="label" for="password">Password:</label>
+            <input
             class="input"
             type="password"
             id="password"
             name="password"
             placeholder="Password"
             required
-          />
+            />
+
           <button class="button" type="submit">Login</button>
           <a class="link" href="/signup">Sign Up</a>
         </form>
       </div>
-    </section>
+    </div>
   </body>
 </html>
